--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://tuenti.github.io/door-dashboard",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
